--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -184,7 +184,9 @@ const ogImage =
       <slot />
     </main>
     <Footer />
-  </body><script defer is:inline>
+  </body>
+
+  <script defer is:inline>
     // helper functions to toggle dark mode
     function enableDarkMode() {
       document.body.classList.add("dark-mode");
