--- a/src/styles/critical.less
+++ b/src/styles/critical.less
@@ -230,13 +230,16 @@
       margin: auto;
       /* 20px - 24px */
       margin-bottom: clamp(1.25rem, 5vw, 1.5rem);
+
       background: var(--primary);
+      color: white;
+
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
 
-      img {
+      svg {
         /* 44px - 52px */
         width: clamp(2.75rem, 5.8vw, 3.25rem);
         height: auto;
