--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -49,7 +49,11 @@
     margin: 0;
     padding: 0;
   }
-  // Text styles - can be replaced using CodeStitch's "Content Flair" Stitches
+
+  /*
+   * Text styles 
+   *  - can be replaced using CodeStitch's "Content Flair" Stitches
+  */
   .topper {
     font-size: var(--topperFontSize);
     font-weight: 700;
@@ -88,7 +92,11 @@
     opacity: 0;
   }
 
-  // Buttons - can be replaced using CodeStitch's "Button" Stitches. Make sure to clear the default .button-solid/outline styles from any new stitches you place.
+  /* 
+   * BUTTONS
+   *  - can be replaced using CodeStitch's "Button" Stitches. Make sure to clear the default .button-solid/outline styles from any new stitches you place.
+   *
+  */
   .button-solid {
     z-index: 1;
     position: relative;
@@ -324,25 +332,6 @@
       url("/assets/fonts/roboto/900-black.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url("/assets/fonts/roboto/900-black.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-
-  body {
-    transition: background-color 0.3s;
-  }
-
-  .container {
-    width: 92%;
-    margin: auto;
-    position: relative;
-  }
-
-  // Hidden Screen reader skip nav button
-  .skip {
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1111111;
   }
 }
 /*-- -------------------------- -->
