(sections) : moved into their own section folder

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Banner from "@components/Banner.astro";
 import ContactForm from "@components/ContactForm.astro";
-import CTA from "@components/CTA.astro";
+import CTA from "@sections/CTA.astro";
 import client from "@data/client.json";
 
 // Optimize our Banner image and pass it as props to the BaseLayout (for preloading) and Banner (for rendering)
