--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
 import type { GetImageResult } from "astro";
 import client from "@data/client.json";
-import Header from "@components/Header.astro";
-import Footer from "@components/Footer.astro";
+import Header from "@sections/Header.astro";
+import Footer from "@sections/Footer.astro";
 import SchemaMarkup from "@components/SchemaMarkup.astro";
 import "@styles/root.less";
 
