--- a/src/pages/projects/project-1.astro
+++ b/src/pages/projects/project-1.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-import CTA from "@components/CTA.astro";
+import CTA from "@sections/CTA.astro";
 import Banner from "@components/Banner.astro";
 
 // Optimize our Banner image and pass it as props to the BaseLayout (for preloading) and Banner (for rendering)
