(sections) : moved into their own section folder

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-import CTA from "@components/CTA.astro";
+import CTA from "@sections/CTA.astro";
 import Banner from "@components/Banner.astro";
-import FAQ from "@components/FAQ.astro";
+import FAQ from "@sections/FAQ.astro";
 
 // Optimize our Banner image and pass it as props to the BaseLayout (for preloading) and Banner (for rendering)
 import BannerImage from "@assets/images/Banner.jpg"; // <-- THE PATH TO THE ASSET YOU WANT TO PRELOAD - The asset must live in src
