--- a/src/pages/blog/[...post].astro
+++ b/src/pages/blog/[...post].astro
@@ -1,19 +1,19 @@
 ---
 /**
  * * This page generates the individual blog posts
-**/
+ **/
 
 import { getCollection, render } from "astro:content";
 import BlogPostLayout from "@layouts/BlogPostLayout.astro";
-import CTA from "@components/CTA.astro";
+import CTA from "@sections/CTA.astro";
 
 // Generates the individual blog pages based on the blog collection
 export async function getStaticPaths() {
-	const posts = await getCollection("blog");
-	return posts.map((entry) => ({
-		params: { post: entry.id },
-		props: { post: entry },
-	}));
+  const posts = await getCollection("blog");
+  return posts.map((entry) => ({
+    params: { post: entry.id },
+    props: { post: entry },
+  }));
 }
 
 const { post } = Astro.props;
@@ -21,5 +21,5 @@ const { Content, headings } = await render(post);
 ---
 
 <BlogPostLayout post={post} headings={headings}>
-	<Content />
+  <Content />
 </BlogPostLayout>
