--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,7 +4,7 @@
  **/
 
 import BaseLayout from "@layouts/BaseLayout.astro";
-import CTA from "@components/CTA.astro";
+import CTA from "@sections/CTA.astro";
 import { getCollection } from "astro:content";
 import { getImage } from "astro:assets";
 import "@styles/sidebar.less";
