--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-import CTA from "@components/CTA.astro";
-import FAQ from "@components/FAQ.astro";
+import CTA from "@sections/CTA.astro";
+import FAQ from "@sections/FAQ.astro";
 
 import client from "@data/client.json";
 
