(button) : used button in hero

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import Button from "@components/Button.astro";
 import CTA from "@sections/CTA.astro";
 import FAQ from "@sections/FAQ.astro";
 
@@ -61,7 +62,7 @@ import { Icon } from "astro-icon/components";
         Be more descriptive of the services and solutions the company / business
         offers related to the h1
       </p>
-      <a href="/contact/" class="button-solid">Get in Touch</a>
+      <Button href="/contact/" class="button-solid">Get in Touch</Button>
     </div>
 
     <picture class="background">
